remainder of AB, ABerr and fixed EBV

--- a/docs/datasets/COS-Halos_database.ipynb
+++ b/docs/datasets/COS-Halos_database.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COS-Halos Database (v1.2.0)\n",
+    "# COS-Halos Database (v1.2.1)\n",
     "\n",
     "This Notebook is intended to record updates to the COS-Halos database.\n",
     "\n",
@@ -15,7 +15,8 @@
     " * v1.1.1 -- 14 Jul 2016 by JXP  [includes 2 values for sig_NHI]\n",
     " * v1.1.2 -- 17 Sep 2016 by JXP  [updated NHI for several systems]\n",
     " * v1.1.3 -- 21 Oct 2016 by JXP  [add in new ZH, including PDFs]\n",
-    " * v1.2.0 -- 10 Feb 2017 by JXP  [add in abmagr; not writing tarball to pyigm yet]"
+    " * v1.2.0 -- 10 Feb 2017 by JXP  [add in abmagr; not writing tarball to pyigm yet]\n",
+    " * v1.2.1 -- 1 Dec 2017 by JXP   [rest of AB mag and error]"
    ]
   },
   {
@@ -27,8 +28,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# imports\n",
@@ -388,7 +391,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -410,7 +415,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "names = cos_halos_v10.name"
@@ -419,7 +426,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for key in fdict.keys():\n",
@@ -461,7 +470,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import yaml\n",
@@ -577,7 +588,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mtlfil = pyigm.__path__[0]+'/data/CGM/COS_Halos/COS_Halos_MTL_final.hdf5'\n",
@@ -601,7 +614,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tarfil = 'cos-halos_systems.v1.1.tar.gz'"
@@ -642,18 +657,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "from importlib import reload"
+    "from importlib import reload\n",
+    "from pyigm.cgm import cos_halos as pch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +677,9 @@
      "output_type": "stream",
      "text": [
       "See the COS-Halos_database notebook for details\n",
-      "Generate v1.2 of the JSON tarball\n"
+      "Generate v1.2 of the JSON tarball\n",
+      "read_sets: Using set file -- \n",
+      "  /home/xavier/local/Python/linetools/linetools/lists/sets/llist_v1.2.ascii\n"
      ]
     },
     {
@@ -689,11 +707,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:272: UserWarning: This method may be DEPRECATED\n",
+      "/home/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:282: UserWarning: This method may be DEPRECATED\n",
       "  warnings.warn(\"This method may be DEPRECATED\")\n",
       "/home/xavier/local/Python/linetools/linetools/utils.py:123: UserWarning: Assuming your DEC is +\n",
       "  warnings.warn(\"Assuming your DEC is +\")\n",
-      "/home/xavier/local/Python/pyigm/pyigm/cgm/cgm.py:155: UserWarning: cgm.CGMAbsSys: Using Planck15 cosmology\n",
+      "/home/xavier/local/Python/pyigm/pyigm/cgm/cgm.py:159: UserWarning: cgm.CGMAbsSys: Using Planck15 cosmology\n",
       "  warnings.warn('cgm.CGMAbsSys: Using Planck15 cosmology')\n"
      ]
     },
@@ -727,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -738,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -763,6 +781,7 @@
     }
    ],
    "source": [
+    "reload(pch)\n",
     "chalos_v12 = pch.COSHalos(load=False)\n",
     "tfile = pyigm.__path__[0]+'/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz'\n",
     "chalos_v12.load_sys(tfile=tfile)"
@@ -770,48 +789,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-20.73882484436035"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cgm_abs = chalos_v12.cgm_abs[0]\n",
-    "cgm_abs.galaxy.abmagr"
+    "cgm_abs.galaxy.abmagr, cgm_abs.galaxy.abmagrerr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<CGMAbsSys: J1233+4758_94_38 Galaxy RA/DEC=12:33:38.87+47:57:57.6, zgal=0.222103, rho=137.515 kpc>\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(None, 0.7039307511695455)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "cgm_abs.galaxy.abmagu, cgm_abs.galaxy.abmaguerr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cgm_abs.ebv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "lstr0 = -21.12\n",
     "Lstar = 10**(-0.4*(cgm_abs.galaxy.abmagr - lstr0))\n",
