Small change in NB

--- a/docs/datasets/QPQ_Examples.ipynb
+++ b/docs/datasets/QPQ_Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -29,7 +29,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table140428049827488\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139724054868544\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>DATE</th><th>QPQ_SAVFIL</th><th>QSO</th><th>RAD</th><th>DECD</th><th>QSO_BG</th><th>RAD_BG</th><th>DECD_BG</th><th>ORIG_Z_FG</th><th>Z_FG</th><th>Z_FSIG</th><th>Z_BG</th><th>R_PHYS</th><th>FLG_BOSS</th><th>LYA_INSTR</th><th>LYA_FIL</th><th>INFLG_LYAFIL</th><th>S2N_LYA</th><th>FLG_OTHICK</th><th>Z_LYA</th><th>EWLYA</th><th>SIG_EWLYA</th><th>FLG_EWLYA</th><th>VEW [5]</th><th>VEWLYA [5]</th><th>SIG_VEWLYA [5]</th><th>AVGFLYA [5]</th><th>DELTFLYA [5]</th><th>Z_NHI</th><th>NHI</th><th>SIG_NHI [2]</th><th>FLG_NHI</th><th>FLG_METAL_EW [100]</th><th>FLG_METAL_EYE [100]</th><th>METAL_WREST [100]</th><th>RAW_METAL_EW [100]</th><th>METAL_EW [100]</th><th>METAL_SIGEW [100]</th><th>METAL_S2N [100]</th><th>METAL_VCEN [100]</th><th>L_912</th><th>G_UV</th><th>L_BOL</th></tr></thead>\n",
        "<thead><tr><th>str24</th><th>str85</th><th>str14</th><th>float64</th><th>float64</th><th>str14</th><th>float64</th><th>float64</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>int16</th><th>str9</th><th>str47</th><th>int16</th><th>float32</th><th>int16</th><th>float64</th><th>float32</th><th>float32</th><th>int16</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int16</th><th>int16</th><th>int16</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th></tr></thead>\n",
        "<tr><td>Fri Oct  3 05:05:57 2014</td><td>~/Dropbox/QSOPairs/QPQ-CGM_v5_4_45/QPQ-CGM_00.000-01.000_Sun-Jan-27-18:18:57-2013.sav</td><td>SDSSJ0002-0529</td><td>0.549036804392</td><td>-5.48569053094</td><td>SDSSJ0002-0530</td><td>0.569453216712</td><td>-5.50211784133</td><td>2.81702</td><td>2.81900429726</td><td>520.99987793</td><td>3.14737582207</td><td>768.469</td><td>0</td><td>SDSS</td><td>/data/MAGE_redux/SDSSJ091046.68+041448.3_F.fits</td><td>11</td><td>41.4537</td><td>0</td><td>2.81604441579</td><td>1.28383</td><td>0.0473478</td><td>2</td><td>150.0 .. 0.0</td><td>0.471749 .. 0.0</td><td>0.0251098 .. 0.0</td><td>0.0 .. 0.0</td><td>1.0 .. 0.0</td><td>2.81604</td><td>18.0</td><td>0.2 .. 0.2</td><td>3</td><td>0 .. 0</td><td>0 .. 0</td><td>1302.16845703 .. 0.0</td><td>0.0 .. 0.0</td><td>0.0 .. 0.0</td><td>0.0 .. 0.0</td><td>0.0 .. 0.0</td><td>0.0 .. 0.0</td><td>30.4563</td><td>64.5017</td><td>46.4887</td></tr>\n",
@@ -51,7 +51,7 @@
        "Fri Oct  3 05:05:57 2014 ... 46.7132"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -79,7 +79,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table140427674416688\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139723884934200\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>QSO</th><th>R_PHYS</th><th>z</th><th>QSO_BG</th><th>flag_EW</th><th>EW</th><th>sig_EW</th><th>flag_NHI</th><th>NHI</th><th>sig_NHI [2]</th></tr></thead>\n",
        "<thead><tr><th>str14</th><th>float32</th><th>float64</th><th>str14</th><th>int16</th><th>float32</th><th>float32</th><th>int16</th><th>float32</th><th>float32</th></tr></thead>\n",
        "<tr><td>SDSSJ0002-0529</td><td>768.469</td><td>2.81900429726</td><td>SDSSJ0002-0530</td><td>2</td><td>1.28383</td><td>0.0473478</td><td>3</td><td>18.0</td><td>0.2 .. 0.2</td></tr>\n",
@@ -101,7 +101,7 @@
        "BOSSJ0006-0015 710.853 2.33272147179 ...        3    19.0  0.2 .. 0.2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -121,7 +121,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table140427674847496\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139723884959168\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>QSO</th><th>R_PHYS</th><th>z</th><th>QSO_BG</th><th>flag_EW</th><th>WREST</th><th>EW_RAW</th><th>EW</th><th>sig_EW</th><th>S2N</th><th>VCEN</th><th>flag_EYE</th></tr></thead>\n",
        "<thead><tr><th>str14</th><th>float32</th><th>float64</th><th>str14</th><th>int16</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int16</th></tr></thead>\n",
        "<tr><td>SDSSJ0002-0529</td><td>768.469</td><td>2.81900429726</td><td>SDSSJ0002-0530</td><td>0</td><td>2803.531</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td></tr>\n",
@@ -143,7 +143,7 @@
        "BOSSJ0008-0053 840.546 2.62711811066 BOSSJ0008-0051 ...     0.0     0.0        0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -170,7 +170,7 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table140427675229264\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139723885117904\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>QSO</th><th>R_PHYS</th><th>z</th><th>QSO_BG</th><th>flag_EW</th><th>WREST</th><th>EW_RAW</th><th>EW</th><th>sig_EW</th><th>S2N</th><th>VCEN</th><th>flag_EYE</th></tr></thead>\n",
        "<thead><tr><th>str14</th><th>float32</th><th>float64</th><th>str14</th><th>int16</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int16</th></tr></thead>\n",
        "<tr><td>BOSSJ0031+0034</td><td>528.545</td><td>2.23281335831</td><td>BOSSJ0031+0033</td><td>3</td><td>2803.531</td><td>0.348245</td><td>0.348245</td><td>0.358908</td><td>0.0</td><td>705.36</td><td>128</td></tr>\n",
@@ -192,55 +192,13 @@
        "APOJ0111+1404  749.202  2.0018863678 ...     0.0  1023.66      128"
       ]
      },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qpq.qpq7tab('MgII 2803',non0=True)[0:5] # non-zero EWs only"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "&lt;Table length=5&gt;\n",
-       "<table id=\"table140427674416016\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>Pair</th><th>subsys</th><th>MgIIcol</th><th>MgIIcolerr</th></tr></thead>\n",
-       "<thead><tr><th>str10</th><th>str1</th><th>str5</th><th>str5</th></tr></thead>\n",
-       "<tr><td>J0225+0048</td><td>A</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0225+0048</td><td>B</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0225+0048</td><td>C</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0341+0000</td><td>A</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0409-0411</td><td>A</td><td>/</td><td>/</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "<Table length=5>\n",
-       "   Pair    subsys MgIIcol MgIIcolerr\n",
-       "  str10     str1    str5     str5   \n",
-       "---------- ------ ------- ----------\n",
-       "J0225+0048      A       /          /\n",
-       "J0225+0048      B       /          /\n",
-       "J0225+0048      C       /          /\n",
-       "J0341+0000      A       /          /\n",
-       "J0409-0411      A       /          /"
-      ]
-     },
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qpq.qpq8tab('MgII')[0:5]"
+    "qpq.qpq7tab('MgII 2803',non0=True)[0:5] # non-zero EWs only"
    ]
   },
   {
@@ -254,26 +212,26 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table140427674994560\" class=\"table-striped table-bordered table-condensed\">\n",
-       "<thead><tr><th>Pair</th><th>subsys</th><th>2803EW</th><th>2803EWerr</th></tr></thead>\n",
+       "<table id=\"table139723885028968\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>Pair</th><th>subsys</th><th>MgIIcol</th><th>MgIIcolerr</th></tr></thead>\n",
        "<thead><tr><th>str10</th><th>str1</th><th>str5</th><th>str5</th></tr></thead>\n",
-       "<tr><td>J0225+0048</td><td>A</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0225+0048</td><td>B</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0225+0048</td><td>C</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0341+0000</td><td>A</td><td>/</td><td>/</td></tr>\n",
-       "<tr><td>J0409-0411</td><td>A</td><td>/</td><td>/</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>A</td><td>12.61</td><td>uplim</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>B</td><td>13.24</td><td>lolim</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>C</td><td>13.51</td><td>lolim</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>D</td><td>13.97</td><td>lolim</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>E</td><td>13.70</td><td>lolim</td></tr>\n",
        "</table>"
       ],
       "text/plain": [
        "<Table length=5>\n",
-       "   Pair    subsys 2803EW 2803EWerr\n",
-       "  str10     str1   str5     str5  \n",
-       "---------- ------ ------ ---------\n",
-       "J0225+0048      A      /         /\n",
-       "J0225+0048      B      /         /\n",
-       "J0225+0048      C      /         /\n",
-       "J0341+0000      A      /         /\n",
-       "J0409-0411      A      /         /"
+       "   Pair    subsys MgIIcol MgIIcolerr\n",
+       "  str10     str1    str5     str5   \n",
+       "---------- ------ ------- ----------\n",
+       "J1420+1603      A   12.61      uplim\n",
+       "J1420+1603      B   13.24      lolim\n",
+       "J1420+1603      C   13.51      lolim\n",
+       "J1420+1603      D   13.97      lolim\n",
+       "J1420+1603      E   13.70      lolim"
       ]
      },
      "execution_count": 7,
@@ -282,7 +240,7 @@
     }
    ],
    "source": [
-    "qpq.qpq8tab('2803')[0:5]"
+    "qpq.qpq8tab('MgII')[24:29]"
    ]
   },
   {
@@ -296,7 +254,49 @@
      "data": {
       "text/html": [
        "&lt;Table length=5&gt;\n",
-       "<table id=\"table140427674830272\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139723885027568\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>Pair</th><th>subsys</th><th>2803EW</th><th>2803EWerr</th></tr></thead>\n",
+       "<thead><tr><th>str10</th><th>str1</th><th>str5</th><th>str5</th></tr></thead>\n",
+       "<tr><td>J1420+1603</td><td>A</td><td>/</td><td>/</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>B</td><td>/</td><td>/</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>C</td><td>0.525</td><td>0.046</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>D</td><td>1.149</td><td>0.026</td></tr>\n",
+       "<tr><td>J1420+1603</td><td>E</td><td>0.727</td><td>0.026</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=5>\n",
+       "   Pair    subsys 2803EW 2803EWerr\n",
+       "  str10     str1   str5     str5  \n",
+       "---------- ------ ------ ---------\n",
+       "J1420+1603      A      /         /\n",
+       "J1420+1603      B      /         /\n",
+       "J1420+1603      C  0.525     0.046\n",
+       "J1420+1603      D  1.149     0.026\n",
+       "J1420+1603      E  0.727     0.026"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qpq.qpq8tab('2803')[24:29]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=5&gt;\n",
+       "<table id=\"table139723880160112\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Pair</th><th>subsys</th><th>logU</th><th>MH</th></tr></thead>\n",
        "<thead><tr><th>str10</th><th>str1</th><th>str4</th><th>str4</th></tr></thead>\n",
        "<tr><td>J0225+0048</td><td>A</td><td>-1.8</td><td>-1.5</td></tr>\n",
@@ -318,7 +318,7 @@
        "J0409-0411      A    / -1.5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
